update many pages

--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -37,9 +37,9 @@
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
 <div class="main_navigator_h2">
-<a href="essential_services.html">Essential Ones</a></div>
+<a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2_selected">
-<a href="3rd_party_services.html">Developer Ones</a></div>
+<a href="3rd_party_services.html">Developer Services</a></div>
 
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
