--- a/all_service_apps.html
+++ b/all_service_apps.html
@@ -37,9 +37,9 @@
 <div class="main_navigator_h1_selected">
 <a href="all_service_apps.html">All Service APPs</a></div>
 <div class="main_navigator_h2">
-<a href="essential_services.html">Essential Ones</a></div>
+<a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2">
-<a href="3rd_party_services.html">Developer Ones</a></div>
+<a href="3rd_party_services.html">Developer Services</a></div>
 
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
@@ -83,20 +83,22 @@
 </p>
 </a>
 
-<div class="all_service_exchanger"></div>
-<div class="all_service_exchanger_text">
-	<span style="font-size:5vh;">ASA</span><br>
-	Exchanger
-</div>
+<a href="what.html">
+	<div class="all_service_exchanger">ASA</div>
+</a>
 
-<div class="all_service_essential_1 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
-<div class="all_service_essential_2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
-<div class="all_service_essential_3 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
-<div class="all_service_essential_4 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+<a href="essential_services.html">
+	<div class="all_service_essential_1 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+	<div class="all_service_essential_2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+	<div class="all_service_essential_3 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+	<div class="all_service_essential_4 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+</a>
 
-<div class="all_service_developer_1 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
-<div class="all_service_developer_2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
-<div class="all_service_developer_3 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+<a href="3rd_party_services.html">
+	<div class="all_service_developer_1 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+	<div class="all_service_developer_2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+	<div class="all_service_developer_3 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+</a>
 
 </div>
 
