--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 <a href="all_service_apps.html">All Service APPs</a></div>
 <div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
-<a href="essential_services.html">Essential Ones</a></div>
+<a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
-<a href="3rd_party_services.html">Developer Ones</a></div>
+<a href="3rd_party_services.html">Developer Services</a></div>
 
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="100%" alt="GAUSIAN logo"/></div>-->
 
