--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="top_bar fadeIn fadeIn-50ms"></div>
 
 <div class="ASA_Header_homepage fadeIn fadeIn-50ms">  
-<a href="index.html">GAUSIAN ASA</a></div>
+<a href="index.html">GAUSIAN ASA for Developers</a></div>
 
 <div class="Sign_Header fadeIn fadeIn-50ms">
 <a href="login.html">Developers Sign up / Log in</a></div>
@@ -45,7 +45,7 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="100%" alt="GAUSIAN logo"/></div>-->
 
 
-<div class="body_container">
+<div class="body_container no_scroll">
 <h1 class="fadeIn fadeIn-50ms">APP Serve APP,</h1>
 <h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">where softwares say "All for one, one for all."</h2>
 <h4 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">ASA Nebula</h3>
