fix other pages

--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -43,7 +43,7 @@
 
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container fadeIn fadeIn-50ms"> 
+<div class="body_container no_scroll fadeIn fadeIn-50ms"> 
 <h1>Developer Service APPs</h1>  
 <h2>By <span style="color: #FFBB28;">wordwide</span> brilliant people</h2>
 <p></p>
