--- a/all_service_apps.html
+++ b/all_service_apps.html
@@ -43,7 +43,7 @@
 
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container fadeIn fadeIn-50ms"> 
+<div class="body_container no_scroll fadeIn fadeIn-50ms"> 
 <h1>All Service APPs</h1>
 
 <img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_1.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
