--- a/what.html
+++ b/what.html
@@ -42,7 +42,7 @@
 <a href="3rd_party_services.html">Developer Services</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container">
+<div class="body_container no_scroll">
 <h1 class="fadeIn fadeIn-50ms">ASA <span style="font-size: 24pt;">APP serve APP</span></h1>
 <!-- <h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms"><span style="color: #FFBB28;">is how and where softwares exchange data & service to each other.</span></h2> -->
 <p></p>
