--- a/essential_services.html
+++ b/essential_services.html
@@ -43,7 +43,7 @@
 
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container fadeIn fadeIn-50ms"> 
+<div class="body_container no_scroll fadeIn fadeIn-50ms"> 
 <h1>Essential Service APPs</h1> 
 <h2>Using free GAUSIAN essential services, <span style="color: #FFBB28;">your user-APP can access to user's existing data.</span></h2>
 <h2>This how we make EVERY APP works together for users.</h2>
