--- a/get_service.html
+++ b/get_service.html
@@ -42,7 +42,7 @@
 <a href="3rd_party_services.html">Developer Services</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container fadeIn fadeIn-50ms"> 
+<div class="body_container no_scroll fadeIn fadeIn-50ms"> 
 <h1>Get Service via ASA</h1>  
 <h2></h2>
 
