--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 
 <div class="body_container no_scroll">
-<h1 class="fadeIn fadeIn-50ms">APP Serve APP,</h1>
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">where softwares say "All for one, one for all."</h2>
+<h1 class="fadeIn fadeIn-50ms">GAUSIAN ASA,</h1>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">where cloud apps serve each other.</h2>
 <h4 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">ASA Nebula</h3>
 <h5 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">Real Time Visualization of ASA Network</h5>
 <img class="full_container_img fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt="ASA Nebula"/>
