--- a/what.html
+++ b/what.html
@@ -43,7 +43,7 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container no_scroll">
-<h1 class="fadeIn fadeIn-50ms">ASA <span style="font-size: 24pt;">APP serve APP</span></h1>
+<h1 class="fadeIn fadeIn-50ms">ASA, <span style="font-size: 24pt;">APP serve APP</span></h1>
 <!-- <h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms"><span style="color: #FFBB28;">is how and where softwares exchange data & service to each other.</span></h2> -->
 <p></p>
 
@@ -64,9 +64,10 @@
 	<span style="color: #fdb926">
 	Service APPs are hosted on servers <br/> 
 	to provide data and services like <br/>
-	"searching database of talented people", <br/>
-	"matching better vendors", <br/>
-	"tracking shipments"... <br/>
+	"a unified interface to worldwide e-commerce websites", <br/>
+	"a unified interface for shipment and tracking", <br/>
+	"reading and writing existing data", <br/>
+	"matching better supplier"... <br/>
 	</span>	
 </p>
 </a>
@@ -76,7 +77,8 @@
 <p class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"> 
 	<span style="color: #84c83b">	
 	User APPs are run on client side. <br/>  
-	they can get data and service from ASA system. <br/> 
+	they can get data and service from ASA system <br/> 
+	for certain applications. <br/> 
 	</span>		
 </p>
 </a>
