--- a/business_model.html
+++ b/business_model.html
@@ -47,7 +47,7 @@
 <h1>User-APP pays to Service-APP</h1> 
 <p></p>
 <p>
-	Sorry, this page is under construction :(
+	Sorry, this page is not available yet.
 </p>
 </div>
 
