--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -48,7 +48,7 @@
 <h2>By <span style="color: #FFBB28;">wordwide</span> brilliant people</h2>
 <p></p>
 <p>
-	Sorry, this page is under construction :(
+	Sorry, this page is not available yet.
 </p>
 </div>
 
