--- a/all_service_apps.html
+++ b/all_service_apps.html
@@ -46,8 +46,8 @@
 <div class="body_container no_scroll fadeIn fadeIn-50ms"> 
 <h1>All Service APPs</h1>
 
-<img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_1.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
-<img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_2.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
+<img class="full_container_img_special fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_1.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
+<img class="full_container_img_special fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_2.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
 
 <p></p>
 
