--- a/get_started.html
+++ b/get_started.html
@@ -7,12 +7,8 @@
 </head>
 
 <body bgcolor="#202040">
-<div class="top_bar"></div>
 <div class="ASA_Header">  
-<a href="index.html">GAUSIAN ASA for Developers</a></div>
-
-<div class="Sign_Header">
-<a href="login.html">Developers Sign up / Log in</a></div>
+<a href="index.html">GAUSIAN ASA</a></div>
 
 <div class="main_navigator"> </div>
 <p class="navigator_blank"></p>
@@ -50,7 +46,7 @@
 <img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-100ms" src="img/chatting_system_3.png" width="100%" height="100%" alt="ASA Chatting System"/>
 <img class="full_container_img fadeIn fadeIn-Delay-150ms" src="img/chatting_system_4.png" width="100%" height="100%" alt="ASA Chatting System"/>
 </div> -->
-<div class="body_container_no_scroll fadeIn fadeIn-50ms"> 
+<div class="body_container_no_bar fadeIn fadeIn-50ms"> 
 	<iframe class="full_container_img" frameBorder="0"
 	src="http://tianjiasun.github.io/ASA_api/app/"></iframe>
 </div>
