add header top distance

--- a/get_started.html
+++ b/get_started.html
@@ -7,7 +7,7 @@
 </head>
 
 <body bgcolor="#202040">
-<div class="ASA_Header">  
+<div class="ASA_Header add_top_distance">  
 <a href="index.html">GAUSIAN ASA</a></div>
 
 <div class="main_navigator"> </div>
