--- a/service_apps.html
+++ b/service_apps.html
@@ -8,43 +8,29 @@
 
 <body bgcolor="#202040">
 <div class="top_bar"></div>
-<div class="ASA_Header">  
-<a href="index.html">GAUSIAN ASA for Developers</a></div>
-
 <div class="Sign_Header">
 <a href="login.html">Developers Sign up / Log in</a></div>
 
-<div class="main_navigator"> </div>
+<div class="ASA_Header add_top_distance">  
+<a href="index.html">GAUSIAN ASA</a></div>
+
+<div class="main_navigator"></div>
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<!-- <div class="main_navigator_h2">
-<a href="user_apps.html">User APPs</a></div>
-<div class="main_navigator_h2_selected">
-<a href="service_apps.html">Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="asa_exchanger.html">ASA Exchanger</a></div> -->
+
+<div class="main_navigator_h1_selected">
+<a href="service_apps.html">Service Store</a></div>
+<div class="main_navigator_h2">Top Services</div>
+<div class="main_navigator_h2">Free Services</div>
+<div class="main_navigator_h2">Paid Services</div>
 
 <div class="main_navigator_h1">
 <a href="get_started.html">Get Started</a></div>
-<div class="main_navigator_h2">
-<a href="get_service.html">Get Service</a></div>
-<div class="main_navigator_h2">
-<a href="provide_service.html">Provide Service</a></div>
-<div class="main_navigator_h2">
-<a href="business_model.html">Business Model</a></div>
-
-<div class="main_navigator_h1">
-<a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="essential_services.html">Essential Services</a></div>
-<div class="main_navigator_h2">
-<a href="3rd_party_services.html">Developer Services</a></div>
-
-<!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
+<div class="main_navigator_h2">Get Service</div>
+<div class="main_navigator_h2">Provide Service</div>
 
 <div class="body_container no_scroll fadeIn fadeIn-50ms"> 
-<h1>Service APPs</h1>  
 </div>
 
 </body>
