--- a/what.html
+++ b/what.html
@@ -7,40 +7,28 @@
 </head>
 
 <body bgcolor="#202040">
-<div class="top_bar"></div>
-<div class="ASA_Header">  
-<a href="index.html">GAUSIAN ASA for Developers</a></div>
+<div class="ASA_Header add_top_distance">  
+<a href="index.html">GAUSIAN ASA</a></div>
 
+<div class="main_navigator"></div>
+<div class="top_bar"></div>
 <div class="Sign_Header">
 <a href="login.html">Developers Sign up / Log in</a></div>
 
-<div class="main_navigator"> </div>
+<div class="ASA_Header add_top_distance">  
+<a href="index.html">GAUSIAN ASA</a></div>
+
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1_selected">
 <a href="what.html">What is ASA</a></div>
-<!-- <div class="main_navigator_h2">
-<a href="user_apps.html">User APPs</a></div>
-<div class="main_navigator_h2">
-<a href="service_apps.html">Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="asa_exchanger.html">ASA Exchanger</a></div> -->
+
+<div class="main_navigator_h1">
+<a href="service_apps.html">Service Store</a></div>
 
 <div class="main_navigator_h1">
 <a href="get_started.html">Get Started</a></div>
-<div class="main_navigator_h2">
-<a href="get_service.html">Get Service</a></div>
-<div class="main_navigator_h2">
-<a href="provide_service.html">Provide Service</a></div>
-<div class="main_navigator_h2">
-<a href="business_model.html">Business Model</a></div>
-
-<div class="main_navigator_h1">
-<a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="essential_services.html">Essential Services</a></div>
-<div class="main_navigator_h2">
-<a href="3rd_party_services.html">Developer Services</a></div>
-<!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
+<div class="main_navigator_h2">Get Service</div>
+<div class="main_navigator_h2">Provide Service</div>
 
 <div class="body_container no_scroll">
 <h1 class="fadeIn fadeIn-50ms">ASA, <span style="font-size: 24pt;">APP serve APP</span></h1>
@@ -51,35 +39,40 @@
 <h2 class=" fadeIn fadeIn-50ms fadeIn-Delay-50ms"><span style="color: #65cbfe">ASA Exchanger</span></h2>
 <p class="fadeIn fadeIn-50ms fadeIn-Delay-50ms"> 
 	<span style="color: #65cbfe">
-	ASA Exchanger is a central network service<br/> 
-	of GAUSIAN for data and service exchanging between <br/> 
+	ASA-Exchanger is a core of GAUSIAN <br/> 
+	for data and service exchanging among <br/> 
 	worldwide APPs. <br/>
 	</span>
 </p>
 </a>
 
 <a href="service_apps.html">
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms"><span style="color: #fdb926">Service APPs</span></h2>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">
+	<span style="color: #fdb926">Service APPs <span style="font-size: 2vh">(open to developers)</span></span>
+</h2>
 <p class="fadeIn fadeIn-50ms fadeIn-Delay-100ms"> 
 	<span style="color: #fdb926">
-	Service APPs are hosted on servers <br/> 
+	Service-APPs are hosted on servers <br/> 
 	to provide data and services like <br/>
 	"a unified interface to worldwide e-commerce websites", <br/>
 	"a unified interface for shipment and tracking", <br/>
-	"reading and writing existing data", <br/>
-	"matching better supplier"... <br/>
+	"reading and writing existing database", <br/>
+	"matching better supplier", <br/>
+	use your imagine...
 	</span>	
 </p>
 </a>
 
 <a href="user_apps.html">
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"><span style="color: #84c83b">User APPs</span></h2>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+	<span style="color: #84c83b">User APPs <span style="font-size: 2vh">(open to developers)</span></span>
+</h2>
 <p class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"> 
 	<span style="color: #84c83b">	
-	User APPs are run on client side. <br/>  
-	they can get data and service from ASA system <br/> 
-	for certain applications. <br/> 
-	</span>		
+	User APPs run on client side. <br/>  
+	They get data and service via ASA Exchanger. <br/> 
+	Sometimes, User-APPs pay for services. <br/> 
+	</span>
 </p>
 </a>
 
