--- a/index.html
+++ b/index.html
@@ -8,48 +8,32 @@
 
 <body bgcolor="#202040">
 <div class="top_bar fadeIn fadeIn-50ms"></div>
-
-<div class="ASA_Header_homepage fadeIn fadeIn-50ms">  
-<a href="index.html">GAUSIAN ASA for Developers</a></div>
-
 <div class="Sign_Header fadeIn fadeIn-50ms">
 <a href="login.html">Developers Sign up / Log in</a></div>
+
+<div class="ASA_Header add_top_distance">  
+<a href="index.html">GAUSIAN ASA</a></div>
 
 <div class="main_navigator"></div>
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1 fadeIn fadeIn-50ms">
 <a href="what.html">What is ASA</a></div>
-<!-- <div class="main_navigator_h2 fadeIn fadeIn-50ms">
-<a href="user_apps.html">User APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms">
-<a href="service_apps.html">Service APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms">
-<a href="asa_exchanger.html">ASA Exchanger</a></div> -->
 
 <div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
-<a href="get_started.html">Get Started</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
-<a href="get_service.html">Get Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
-<a href="provide_service.html">Provide Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
-<a href="business_model.html">Business Model</a></div>
+<a href="service_apps.html">Service Store</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">Top Services</div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">New Services</div>
 
 <div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
-<a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
-<a href="essential_services.html">Essential Services</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
-<a href="3rd_party_services.html">Developer Services</a></div>
-
-<!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="100%" alt="GAUSIAN logo"/></div>-->
-
+<a href="get_started.html">Get Started</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">Get Service</div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">Provide Service</div>
 
 <div class="body_container no_scroll">
-<h1 class="fadeIn fadeIn-50ms">GAUSIAN ASA,</h1>
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">where cloud apps serve each other.</h2>
+<h1 class="fadeIn fadeIn-50ms">GAUSIAN ASA</h1>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">We are here to change this world. Are you with us?</h2>
 <h4 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">ASA Nebula</h3>
-<h5 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">Real Time Visualization of ASA Network</h5>
+<h5 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">Visualization of ASA Networking</h5>
 <img class="full_container_img fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt="ASA Nebula"/>
 </div>
 </body>
