--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
 <body bgcolor="#202040">
 <div class="top_bar fadeIn fadeIn-50ms"></div>
-<div class="Sign_Header fadeIn fadeIn-50ms">
-<a href="login.html">Developers Sign up / Log in</a></div>
+<div class="Sign_Header fadeIn fadeIn-50ms">Developers Sign up / Log in</div>
 
-<div class="ASA_Header add_top_distance">  
-<a href="index.html">GAUSIAN ASA</a></div>
+<div id="index_bn" class="ASA_Header add_top_distance">GAUSIAN ASA</div>
 
 <div class="main_navigator"></div>
 <p class="navigator_blank"></p>
@@ -38,7 +36,6 @@
 	<h1 class="fadeIn fadeIn-50ms">ASA, <span style="font-size: 24pt;">APP serve APP</span></h1>
 	<p></p>
 
-	<a href="asa_exchanger.html">
 	<h2 class=" fadeIn fadeIn-50ms fadeIn-Delay-50ms"><span style="color: #65cbfe">ASA Exchanger</span></h2>
 	<p class="fadeIn fadeIn-50ms fadeIn-Delay-50ms"> 
 		<span style="color: #65cbfe">
@@ -47,9 +44,7 @@
 		worldwide APPs. <br/>
 		</span>
 	</p>
-	</a>
 
-	<a href="service_apps.html">
 	<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 		<span style="color: #fdb926">Service APPs <span style="font-size: 2vh">(open to developers)</span></span>
 	</h2>
@@ -64,9 +59,7 @@
 		use your imagine...
 		</span>	
 	</p>
-	</a>
 
-	<a href="user_apps.html">
 	<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-150ms">
 		<span style="color: #84c83b">User APPs <span style="font-size: 2vh">(open to developers)</span></span>
 	</h2>
@@ -77,7 +70,6 @@
 		Sometimes, User-APPs pay for services. <br/> 
 		</span>
 	</p>
-	</a>
 
 	<img class="full_container_img_nodrag fadeIn fadeIn-50ms fadeIn-Delay-150ms" src="img/what_userapp.png" height="100%" alt=""/>
 	<img class="full_container_img_nodrag fadeIn fadeIn-50ms fadeIn-Delay-100ms" src="img/what_serviceapp.png" height="100%" alt=""/>
