--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body bgcolor="#202040">
-<div class="top_bar fadeIn fadeIn-50ms"></div>
-<div class="Sign_Header fadeIn fadeIn-50ms">Developers Sign up / Log in</div>
+<div id="top_bar_id" class="top_bar fadeIn fadeIn-50ms"></div>
+<div id="sign_header_id" class="Sign_Header fadeIn fadeIn-50ms">Developers Sign up / Log in</div>
 
 <div id="index_bn" class="ASA_Header add_top_distance">GAUSIAN ASA</div>
 
