--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="top_bar_id" class="top_bar fadeIn fadeIn-50ms"></div>
 <div id="sign_header_id" class="Sign_Header fadeIn fadeIn-50ms">Developers Sign up / Log in</div>
 
-<div id="index_bn" class="ASA_Header add_top_distance">GAUSIAN ASA</div>
+<div id="index_bn" class="ASA_Header add_top_distance">Developers</div>
 
 <div class="main_navigator"></div>
 <p class="navigator_blank"></p>
